연산자 오버로딩 수업

--- a/WeekAssignments/WeekAssignments.vcxproj
+++ b/WeekAssignments/WeekAssignments.vcxproj
@@ -139,11 +139,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="MyArray.h" />
     <ClInclude Include="MyString.h" />
+    <ClInclude Include="Point2D.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="MyArray.cpp" />
     <ClCompile Include="MyString.cpp" />
+    <ClCompile Include="Point2D.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
