--- a/WeekAssignments/WeekAssignments.vcxproj.filters
+++ b/WeekAssignments/WeekAssignments.vcxproj.filters
@@ -18,12 +18,24 @@
     <ClInclude Include="MyString.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Point2D.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="MyArray.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MyString.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="main.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Point2D.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="MyArray.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
